@startuml Name
Class NameCard <<@Entity>> {
    -id : Integer
    -name : String
    -description : String
    -gender : boolean
    --
    +NameCard()
    +NameCard(id : Integer, name : String, description : String)
    .. Modified getter ..
    +getGender() : int
    --
    +[Getters and Setters]
}

class NameController <<@Controller>> {
    -userService : UserService
    -nameService : NameService
    +NameController(userService : UserService, nameService : NameService)
    +swipeNames(model: Model, session HttpSession) : String
}

class HomeController <<@Controller>> {
    -userService : UserService
    -nameService : NameService
    +HomeController(userService : UserService, nameService : NameService)
    +home(model : Model) : String
}
class NameRestController <<@RestController>> {
    -userService : UserService
    -nameService : NameService
    +NameRestController(userService : UserService, nameService : NameService)
    +approveName(id : String, male : String, female : String, session : HttpSession) : Optional<NameCard>
    +disapproveName(id : String, male : String, female : String, session : HttpSession) : Optional<NameCard>
    +getNewName(id : String, male : String, female : String, session : HttpSession) : Optional<NameCard>
    +getNewNameCard(user : User, nameService : NameService, gender : int) : Optional<NameCard>
}
Interface NameRepository<<interface>> {
    delete(namecard NameCard)
    findAll() : List<NameCard>
    findById(id : Integer ) : Optional<NameCard>
    findAllByGender(bool : boolean) : List<NameCard>
}
Interface NameService <<Interface>> {
    save(nameCard : NameCard) : NameCard
    delete(nameCard : NameCard) : NameCard
    findAll() : List<NameCard>
    findById(id : Integer) : Optional<NameCard>
    findAllByGender(bool : boolean) : List<NameCard>
}
class NameServiceImplementation <<@Service>> {
    repository : NameRepository
    --
    +NameServiceImplementation(nameRepo : NameRepository)
    +save(nameCard : NameCard) : NameCard
    +delete(nameCard : NameCard)
    +findAll() : List<NameCard>
    +findById(id : Integer) : Optional<NameCard>
    +findAllByGender(bool : boolean) : List<NameCard>
}

NameService <|-- NameServiceImplementation

NameRepository <-- NameServiceImplementation

NameService <-- HomeController

NameService <-- NameController

NameService <-- NameRestController
@enduml